# GameYamlSpiderAndGenerator

./: .gitignore  .pdm-python  GameYamlSpider.spec  README.md  TODO.txt  config.yaml  git.py  imghandle.py  loader.py  pkg.py  pyproject.toml  requirements.txt  ruff.toml  search.py  steam.py  version.json
.github/workflows/: Pyinstaller.yml  Test Default Hooks.yml  Test Main Program.yml  python-app.yml
docs/: api.md  install_hooks.md  write_hooks.md
gameyamlspiderandgenerator/: __init__.py  __main__.py  cli.py  config.yaml  data_types.py  exception.py  loader.py
gameyamlspiderandgenerator/gui/: untitled.ui
gameyamlspiderandgenerator/hook/: __init__.py  _base.py  openai.py  search.py  validate.py
gameyamlspiderandgenerator/plugin/: __init__.py  _base.py  _gcores.py  gcores.py  itchio.py  search.py  steam.py
gameyamlspiderandgenerator/util/: check_update.py  config.py  fgi.py  fgi_yaml.py  plugin_manager.py  setting.py  spider.py  status_code.py  thread.py  yaml_parse.py
gui/: main.py
plugin/: itchio.py  search.py  steam.py
tests/: __init__.py  config.yaml  hook_test.py  local_test.py  test_cli.py  test_config.yaml  test_init.py  test_spider.py  unit_test.py
util/: check_update.py  setting.py  spider.py  status_code.py  yaml_parse.py
