[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.4.4",
]
all = [
    "yamlgenerator-hook-openai"
]

[project]
name = "gameyamlspiderandgenerator"
version = "2.1.0dev5"
description = "A useful tool for generating Furrygameindex yaml files"
readme = "README.md"
authors = [
    {name = "kaesinol"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "langcodes>=3.3.0",
    "language-data>=1.1,<2.0",
    "html2text>=2020.1.1",
    "urllib3>=2.0",
    "beautifulsoup4>=4.0",
    "pillow>=10.0",
    "ruamel-base>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "pysocks>=1.7.1",
    "lxml>=4.9.2",
    "py3langid>=0.2.2",
    "epicstore-api>=0.1.7,<1.0",
    "deepdiff>=7.0.1",
    "FGI-YAML-Formattor>=0.1.0,<1.0",
    "yamlgenerator-hook-search>=1.0.1,<2.0",
    "yamlgenerator-hook-validate>=1.0.0a1,<2.0",
    "curl-cffi>=0.7.3",
    "jq>=1.8.0",
]

urls = { "Homepage" = "https://github.com/FurryGamesIndex/GameYamlSpiderAndGenerator/" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Natural Language :: English",
    "Typing :: Typed"
]

[project.optional-dependencies]
openai = ["yamlgenerator-hook-openai>=1.0.0b,<2.0"]
[tool.setuptools]
packages = ["gameyamlspiderandgenerator"]